# POO2_Buffy

./: CMakeLists.txt  Field.cpp  Field.h  Rapport_Labo4.docx  UML.sly  Utils.cpp  Utils.h  main.cpp  ~$pport_Labo4.docx
Action/: Action.cpp  Action.h  Kill.cpp  Kill.h  Move.cpp  Move.h  Transform.cpp  Transform.h
GUI/: Display.cpp  Display.h
Humanoid/: Buffy.cpp  Buffy.h  Human.cpp  Human.h  Humanoid.cpp  Humanoid.h  Vampire.cpp  Vampire.h
Position/: Movement.cpp  Movement.h  Offset.cpp  Offset.h  Position.cpp  Position.h
SIM/: Simulation.cpp  Simulation.h
